resolved page break bug in print media query & improved text legibility through font & line adjustments

--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -361,4 +361,9 @@ ul {
   ::-webkit-scrollbar {
     display: none;
   }
+
+  #root {
+    height: initial;
+    overflow-y: initial;
+  }
 }
